@@ -16,6 +16,7 @@
 - https://github.com/eclipse-syson/syson/issues/1196[#1196] [general-view] Add _New Exhibit State with referenced State_ tool on `Part Usage` graphical elements.
 - https://github.com/eclipse-syson/syson/issues/1214[#1214] [export] Implement textual export of `ForkNode`.
 - https://github.com/eclipse-syson/syson/issues/1216[#1216] [export] Implement textual export of `JoinNode`.
+- https://github.com/eclipse-syson/syson/issues/1217[#1217] [export] Implement textual export of `MergeNode`.
 
 === New features
 
